--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nexus Code - Soluções Tecnológicas Avançadas</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/nexus.png">
     <script>
         tailwind.config = {
             theme: {
