--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
                                 </div>
                                 <div>
                                     <div class="font-semibold">Telefone</div>
-                                    <div class="text-gray-300">(11) 99999-9999</div>
+                                    <div class="text-gray-300">(27) 99999-9999</div>
                                 </div>
                             </div>
 
@@ -873,7 +873,7 @@
                                 </div>
                                 <div>
                                     <div class="font-semibold">Localização</div>
-                                    <div class="text-gray-300">São Paulo, SP - Brasil</div>
+                                    <div class="text-gray-300">Aracruz, ES - Brasil</div>
                                 </div>
                             </div>
                         </div>
@@ -1016,7 +1016,7 @@
             <div class="border-t border-gray-700 pt-8">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <div class="text-gray-400 text-sm mb-4 md:mb-0">
-                        &copy; 2024 Nexus Code. Todos os direitos reservados.
+                        Nexus Code &copy; Todos os direitos reservados.
                     </div>
                     <div class="flex space-x-6 text-sm text-gray-400">
                         <a href="#" class="hover:text-nexus-blue transition-colors duration-300">Política de Privacidade</a>
