--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
                                 </div>
                                 <div>
                                     <div class="font-semibold">Email</div>
-                                    <div class="text-gray-300">contato@nexuscode.com</div>
+                                    <div class="text-gray-300">contato@nexuscodebrasil.com.br</div>
                                 </div>
                             </div>
 
